--- a/redes/tp2/package.json
+++ b/redes/tp2/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "my-express-app",
+  "version": "1.0.0",
+  "description": "A simple Express.js application",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "test": "echo \"No tests specified\" && exit 0"
+  },
+  "author": "Your Name",
+  "license": "MIT",
+  "type": "module",
   "dependencies": {
     "express": "^5.1.0"
   }
